# task-python

task_python/: .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
task_python/alembic/: env.py
task_python/alembic/versions/: 2024_07_05_1926-b9c83e1e8509_initial_commit.py
task_python/src/: Dockerfile  __init__.py  db.py  main.py  models.py  settings.py
task_python/src/service_state/: __init__.py  models.py  repository.py  router.py  schemas.py  utils.py
